--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack-dev-server",
     "build": "./node_modules/webpack/bin/webpack.js",
     "test": "jest",
-    "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js"
+    "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
   },
   "repository": {
     "type": "git",
@@ -56,5 +58,9 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "@valentinovtino/complete-me": "git+https://github.com/valentinovtino/complete-me.git",
+    "node-sass-chokidar": "0.0.3"
   }
 }
